acerca de terminado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Activities.Internal"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Activities.Internal"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Activities.Register" />
         <activity android:name=".Activities.Login">
             <intent-filter>
